# thoughtlens

./: .gitignore  README.md  config.py  install.py  main.py  pyproject.toml  start.bat  start.sh  test_direct_call.py  test_lobster.py  test_simple.py
api/: __init__.py  control.py  sse.py
configs/: thoughtlens_policy.yaml
core/: __init__.py  proxy.py  session.py  watcher.py
demo/: generate_test_images.py  hello.txt  interactive_agent.py
demo/scenarios/: __init__.py  api_exfiltration.py  file_injection.py
events/: __init__.py  emitter.py  pause.py  schema.py
prism/: __init__.py  slots.py
prism/probe/: __init__.py  capabilities.py
prism/translate/: __init__.py  stream.py
security/: Readme.md  __init__.py  detector.py  lobster.py  scanner.py  scope.py
ui/: .eslintrc.cjs  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
ui/src/: App.jsx  index.css  main.jsx  tailwind.output.css
ui/src/components/: AuditLog.jsx  BootSequence.jsx  ControlPanel.jsx  InjectionHighlight.jsx  SessionBar.jsx  ThoughtStream.jsx
ui/src/hooks/: useSession.js  useThoughtStream.js
ui/src/styles/: animations.css  globals.css
