[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thoughtlens"
version = "0.1.0"
description = "Live mid-execution agent forensics proxy"
requires-python = ">=3.11"

dependencies = [
    "prism-proxy>=0.3.0",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "Pillow>=10.0",
    "piexif>=1.1.3",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-multipart>=0.0.9",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["api*", "core*", "events*", "security*"]